# SimpleCalculator

./: CMakeLists.txt  README.md  main.cpp
